# BlockChain

./: CMakeLists.txt  README.md  main.cpp
blockchain/: block.h  blockchain.h  retiro.h  sistema.h  usuario.h
csv/: data-2.csv
estructuras/: Iterator.h  IteratorF.h  circular_array.h  double.h  forward_list.h  hash.h  heap.h  trie.h  vector.h
interfaz/: TextInput.h  block.h  blockchain.h  button.h  clientes.h  funciones.h  label.h  login.h  register.h  registrosblock.h  textshow.h  view.h  viewmanager.h
